src/objects/Product_Group_Assignment__c.object
<CustomObject>
    <description>This is a grouping category for tasks.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Product_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Release to which this task group is to be assigned.</description>
        <label>Product Release</label>
        <referenceTo>Product_Release__c</referenceTo>
        <relationshipName>Product_Group_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Priority__c</fullName>
        <description>Picklist field to assist with task prioritization.</description>
        <inlineHelpText>Picklist field to assist with task prioritization.</inlineHelpText>
        <label>Assignment Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Business Development - BCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is the summary goal of the Product Group Assignment</description>
        <inlineHelpText>This is the summary goal of the Product Group Assignment</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is there is a product group assignment that this Assignment is related to?</description>
        <label>Related Product Group Assignment</label>
        <referenceTo>Product_Group_Assignment__c</referenceTo>
        <relationshipName>Product_Group_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <description>Who requested this update?</description>
        <label>Requested By:</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <description>Date that the requested improvement should be complete by.</description>
        <inlineHelpText>Date that the requested improvement should be complete by.</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <label>Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>